<resources>
    <!--    Heart Rate Activity -->
    <string name="app_name">HR Tracker</string>
    <string name="on_body_header_label_worn">Device worn</string>
    <string name="on_body_header_label_not_worn">Device not worn</string>
    <string name="tracker_header_label_default">Tracker stopped</string>
    <string name="tracker_header_label_measuring">Tracker working</string>
    <string name="tracker_header_label_starting">Waiting for data</string>
    <string name="status_label">Status</string>
    <string name="status_default_value">--</string>
    <string name="heart_rate_label">HR Value</string>
    <string name="heart_rate_default_value">--</string>
    <string name="body_sensors">android.permission.BODY_SENSORS</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <!--    Alert Messages  -->
    <string name="no_connection_title">Disconnected</string>
    <string name="no_connection_message">"No connection to Health Tracking Service. Check error log.</string>
    <string name="no_heart_rate_available_title">Sensor error</string>
    <string name="no_heart_rate_available_message">Heart rate measurement not available on the device.</string>
    <string name="no_permission_title">No permission</string>
    <string name="no_permission_message">User permission is required. Grant permission in App settings.</string>
    <string name="sdk_policy_error">SDK Policy Error occurred</string>
    <string name="no_off_body_sensor_title">Off-body sensor error</string>
    <string name="no_off_body_sensor_message">Could not setup off-body sensor. Make sure it\'s available on the device.</string>
    <string name="device_removed_during_measurement">Watch removed. Measurement stopped.</string>
    <string name="device_not_worn">Please wear the watch.</string>
    <!--    Connection Manager -->
    <string name="connected_to_health_services">Connected to Health Services.</string>
    <string name="no_valid_health_platform">Health Platform version is outdated or not installed.</string>
</resources>