<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boxLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samsung.health.hrtracker.HeartRateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="top|bottom">

        <LinearLayout
            android:id="@+id/layHeartRateBPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/butStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layHeader">

            <TextView
                android:id="@+id/txtHeartRateBPMName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rate_label"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:minLines="2"
                android:textSize="@dimen/header_font_size" />

            <TextView
                android:id="@+id/txtHeartRateBPMValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rate_default_value"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/value_font_size"
                android:minEms="2"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layHeartRateStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/butStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layHeader">

            <TextView
                android:id="@+id/txtHeartRateStatusName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:minLines="2"
                android:textSize="@dimen/header_font_size" />

            <TextView
                android:id="@+id/txtHeartRateStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_default_value"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/value_font_size"
                android:minEms="2"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_font_size"
                android:text="@string/app_name"
                app:layout_constrainedWidth="true" />

        </LinearLayout>

        <Button
            android:id="@+id/butStart"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button_background"
            android:onClick="onMeasurementButtonClick"
            android:text="@string/button_start"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_font_size"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.938"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <ProgressBar
            android:id="@+id/pgMeasurement"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>